# puzzlescript-rust

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  convert_solutions_to_save.js  play  stats.txt  test.bash  test_solutions.bash
games/: 1-2-3-ban.parsed.json  1-2-3-ban.parsed.json.save.json  2d-whale-world.parsed.json  2d-whale-world.parsed.json.save.json  2d-whale-world.parsed.json.test-replay.json  9x9-go.parsed.json  README.md  a-sneeze-a-day.parsed.json  a-sneeze-a-day.parsed.json.save.json  a-sneeze-a-day.parsed.json.test-replay.json  aaaah-i-m-being-attacked.parsed.json  aaaah-i-m-being-attacked.parsed.json.save.json  aaaah-i-m-being-attacked.parsed.json.test-replay.json  aaaah-i-m-being-attacked.solutions.json  airport-aggression.parsed.json  airport-aggression.parsed.json.save.json  alien-disco.parsed.json  alien-disco.parsed.json.test-replay.json  alternatey.parsed.json  always-magnets.parsed.json  always-magnets.parsed.json.test-replay.json  atlas-shrank.parsed.json  atlas-shrank.parsed.json.save.json  atlas-shrank.solutions.json  aunt-flora-s-mansion.parsed.json  baba-is-you.parsed.json  baba-is-you.parsed.json.save.json  baba-is-you.parsed.json.test-replay.json  baguettes.parsed.json  baguettes.parsed.json.test-replay.json  bal-ru-s-curse.parsed.json  barrier-trail.parsed.json  barrier-trail.parsed.json.save.json  beam-islands.parsed.json  beam-islands.parsed.json.save.json  becoming-one.parsed.json  becoming-one.parsed.json.save.json  becoming-one.solutions.json  block-touching.parsed.json  block-touching.parsed.json.save.json  (+495 more)
src/: bitset.rs  cli.rs  color.rs  debugger.rs  engine.rs  json.rs  main.rs  model.rs  parser.rs  save.rs  slurp.rs  terminal.rs
src/model/: board.rs  bracket.rs  cell.rs  game.rs  neighbor.rs  rule.rs  tile.rs  util.rs
