[package]
name = "puzzlescript_rust"
version = "0.1.0"
authors = ["Philip Schatz <253202+philschatz@users.noreply.github.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]

clap = "2.33.0"
env_logger = "0.6.2"
fnv = "1.0.6"
hex = "0.3.2"
log = "0.4.6"
rand = "0.7.0"
rand_core = "0.5.0"
rand_xorshift = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5.3"
tui = "0.6.1"